[workspace]
resolver = "2"
members = ["types", "contract"]

[workspace.package]
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dusk-eth-contract-types = { path = "./types", version = "=0.1.0" }

# External dependencies
piecrust-uplink = { version = "0.12.0", features = ["abi", "dlmalloc"] }

bytecheck = { version = "0.6.12", default-features = false }
rkyv = { version = "0.7.44", default-features = false, features = [
	"size_32",
	"alloc",
	"validation",
] }
