[workspace]
resolver = "2"
members = ["types", "contract"]

[workspace.package]
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
deth-contract-types = { path = "./types", version = "=0.1.0" }

# External dependencies
piecrust-uplink = { version = "0.12.0", features = ["abi", "dlmalloc"] }

bytecheck = { version = "0.6.12", default-features = false }
rkyv = { version = "0.7.44", default-features = false, features = [
	"size_32",
	"alloc",
	"validation",
] }

digest = { version = "0.10.7", default-features = false }
rand = { version = "0.8.5", default-features = false }
secp256k1 = { version = "0.29.0", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10.8", default-features = false }
