[package]
name = "deth-contract-types"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bytecheck = { workspace = true }
rkyv = { workspace = true }

digest = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
